# esp32c3-hub

./: .gitignore  .nvim  Cargo.toml  build.rs
.cargo/: config.toml
scripts/: esp32-build.sh  esp32-flash.sh  esp32-setup.sh
src/: main.rs
